--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>AI Podcast Summarizer</h1>
-        <p>Just watched a podcast or you are yet to watch and need the summary? I've got you! Just paste the link here.</p>
+        <p>Just finished a podcast? Or maybe you're short on time and need the key takeaways? I've got you covered! Paste the podcast link below, and I'll summarize it for you. Quick, easy, and hassle-free!.</p>
         
         <input type="text" id="podcastLink" placeholder="Paste Spotify or YouTube link...">
         <button id="summarizeButton">Summarize</button>
