--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>AI Podcast Summarizer</title>
     <link rel="stylesheet" href="styles.css">
 	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5224984958380760"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
